--- a/travis.yml
+++ b/travis.yml
@@ -1,7 +1,10 @@
 language: python
 python:
   - "2.7"
+
 # command to install dependencies
-install: "pip install -r requirements.txt --use-mirrors"
+install: 
+  - "pip install -r requirements.txt --use-mirrors"
+
 # command to run tests
 script: nosetests
