Added setup.py build / install stages to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 # command to install dependencies
 install: 
   - "pip install -r requirements.txt --use-mirrors"
+  - "python setup.py build"
+  - "python setup.py install"
 
 # command to run tests
 script: nosetests
